[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/character2.0/Character.gd" type="Script" id=1]
[ext_resource path="res://scripts/character2.0/trigger_area.gd" type="Script" id=2]
[ext_resource path="res://scripts/character2.0/animated_sprite.gd" type="Script" id=3]
[ext_resource path="res://scripts/character2.0/collider.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/health_bar.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/health.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[node name="Character" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="animated_sprites" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
script = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
script = ExtResource( 4 )

[node name="vision_area" type="Area2D" parent="."]
input_pickable = false
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape2D" parent="vision_area"]
shape = SubResource( 3 )

[node name="attack_area" type="Area2D" parent="."]
input_pickable = false
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 4 )

[node name="health_bar" type="TextureProgress" parent="."]
margin_right = 64.0
margin_bottom = 16.0
value = 100.0
rounded = true
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
